--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.developerbhuwan.spring.knight</groupId>
     <artifactId>spring-knight-release</artifactId>
-    <version>1.0.0.BUILD-SNAPSHOT</version>
+    <version>1.0.0.SK-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>io.developerbhuwan.spring.knight.build</groupId>
         <artifactId>spring-knight-build</artifactId>
-        <version>1.0.0.BUILD-SNAPSHOT</version>
+        <version>1.0.0.SK-1-SNAPSHOT</version>
     </parent>
 
     <name>Spring Knight Release - BOM</name>
